--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -69,17 +69,17 @@
     <div class="container">
 
 		<div class="content-leftColumn">
-			<div style="margin-top: 60px; text-align: center;">
+			<div style="margin-top: 30px; text-align: center;">
 				<img src="{{ STATIC_URL }}assets/img/header.png" alt="Logotipo Amadeus" />
-				<div>O Amadeus é um software público brasileiro. Use-o!</div>
+				<div>Crie uma nova conta Amadeus e entre nessa comunidade de Ensino a Distância.</div>
 			</div>
 			<div style="margin-top: 60px; text-align: center;">
 				<img src="{{ STATIC_URL }}assets/img/android.png" alt="Logotipo Amadeus" />
-				<div>O Amadeus é um software público brasileiro. Use-o!</div>
+				<div>Com uma conta no Amadeus você pode acessar os arquivos do seu curso através do seu computador, notebook ou celular.</div>
 			</div>
 			<div style="margin-top: 60px; text-align: center;">
 				<img src="{{ STATIC_URL }}assets/img/download.png" alt="Logotipo Amadeus" />
-				<div>O Amadeus é um software público brasileiro. Use-o!</div>
+				<div>Faça download e upload de aulas e arquivos através da sua conta no Amadeus.</div>
 			</div>
 		</div>
 
